# cre2

./: .gitignore  .travis.yml  ANNOUNCE  COPYING  Makefile.am  NEWS  README  README.md  RELEASE-NOTES  acinclude.m4  autogen.sh  configure.ac  configure.sh  prepare.sh
doc/: Makefile.am  cre2.style.css  cre2.texi  macros.texi  overview-linking.texi
meta/autoconf/: ax-gcc-version.m4  mmux-c-headers-includes.m4  mmux-check-page-shift.m4  mmux-check-page-size.m4  mmux-check-pkg-config-macros.m4  mmux-check-re2.m4  mmux-check-target-os.m4  mmux-core.m4  mmux-determine-sizeof.m4  mmux-lang-c11.m4  mmux-lang-c99.m4  mmux-lang-cxx11.m4  mmux-libtool-library-versions.m4  mmux-pkg-config-find-include-file.m4
meta/automake/: mmux-makefile-rules
meta/scripts/: cre2.pc.in
meta/travis-ci/: install-autoconf.sh  install-automake.sh  install-pkg-config.sh  install-re2.sh  install-texinfo.sh
src/: Makefile.am  cre2-version.c  cre2.cpp  cre2.h
tests/: Makefile.am  cre2-test.h  test-capture-names-iter.c  test-consume-match.c  test-easy-matching.c  test-find-and-consume-match.c  test-full-match.c  test-matching.c  test-misc.c  test-options.c  test-partial-match.c  test-replace.c  test-rex-alloc.c  test-set.c  test-version.c
